# Mythos

./: .gitmodules  CMakeLists.txt  README.md
res/: Fonts.xcf  Sprites.xcf
res/maps/: testmap.json
res/tiled/: testmap.tmx
src/: CMakeLists.txt  Character.cpp  Character.hpp  GameState.cpp  GameState.hpp  GameboyEntity.cpp  GameboyEntity.hpp  Level.cpp  Level.hpp  Main.cpp  MenuState.cpp  MenuState.hpp  Player.cpp  Player.hpp  Resources.hpp  StartText.cpp  StartText.hpp  Tile.cpp  Tile.hpp  TileObject.cpp  TileObject.hpp
